# libfreenect2

examples/protonect/: CMakeLists.txt  Protonect.cpp
examples/protonect/include/libfreenect2/: config.h.in  depth_packet_processor.h  depth_packet_stream_parser.h  rgb_packet_processor.h
examples/protonect/src/: cuda_depth_packet_processor.cpp  cuda_depth_packet_processor.cu  depth_packet_stream_parser.cpp  libfreenect2.cpp  packet_pipeline.cpp  rgb_packet_stream_parser.cpp  tegra_jpeg_rgb_packet_processor.cpp
